--- a/style.css
+++ b/style.css
@@ -203,16 +203,38 @@
        media queries 
        --------------------------*/
        @media (max-width:640px) {
+           
            header{
+               text-align: center;
+               flex-direction: column;
+               height: 400px;
                width: 100%;
+               box-sizing: border-box;
            }
+           nav{
+               flex-direction: column;
+           }
+           .icon-logo{
+               flex-direction: column;
+           }
+           .icon-logo img{
+               width: 20px;
+           }
+           
+           
            .players{
                display: flex;
-               flex-direction: column;
-               align-items: center;
+              flex-direction: column;
+               
            }
            .player{
-               flex-direction: column;
+              flex-direction: column;
+           }
+           
+           }
+           .container{
+               padding: 0;
+               width: 100%;
            }
            .section-title{
                display: flex;
@@ -236,6 +258,6 @@
            }
            
            
-       }
+       
        
  
